# blog

./: .gitignore  Caddyfile  Dockerfile  Dockerfile_dev  Makefile  _quarto.yml  about.qmd  docker-compose-dev.yml  docker-compose.yml  experiments.qmd  index.qmd  notebooks.qmd  notes.qmd  package-lock.json  package.json  projects.qmd  run_kubernetes.sh
data/: 45212-0004.xlsx  AAPL.csv
docs/: CNAME  a-gaussian-process-model-for-heteroscedasticity.html  about.html  arma-forecasting-for-non-gaussian-time-series-data-using-copulas.html  bayesian-machine-learning-and-julia-are-a-match-made-in-heaven.html  cointegrated-time-series-and-when-difference-transformations-might-be-bad.html  experiments.html  facebook-prophet-covid-and-why-i-dont-trust-the-prophet.html  forecasting-with-decision-trees-and-random-forests.html  index.html  index.xml  lets-make-garch-more-flexible-with-normalizing-flows.html  listings.json  multivariate-garch-with-python-and-tensorflow.html  multivariate-probabilistic-time-series-forecasting-with-lstm-and-gaussian-copula.html  notebooks.html  notes.html  probabilistic-cusum-for-change-point-detection.html  random-forests-and-boosting-for-arch-like-volatility-forecasts.html  robots.txt  search.json  sitemap.xml  styles.css  varying-coefficient-garch.html  when-is-bayesian-machine-learning-actually-useful.html  when-point-forecasts-are-completely-useless.html  winning-with-simple-not-even-linear-time-series-models.html  (+1 more)
wasm_modules/portfolio-optimization/: Cargo.toml
wasm_modules/portfolio-optimization/src/: lib.rs  portfolio_optimizer.rs  utils.rs
(+185 files in other folders)
