[package]
name = "portfolio-optimization"
version = "0.1.0"
authors = ["saremseitz <sarem.seitz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
totsu = "0.10.2"
num-traits = "0.2.15"
serde = { version = "1.0.171", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
iter_num_tools = "0.7.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
